# cmake-gbenchmark-gtest-boilerplate

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  sum_benchmark.cc
cmake/modules/: FindMath.cmake
include/demo/: foo.h  sum.h
src/: CMakeLists.txt  foo.cc  main.cc  sum.cc
test/: CMakeLists.txt  foo_test.cc  sum_test.cc
